--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 
 <html ng-app>
   <head>
-    <!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
-    <link rel="stylesheet" type="text/css" href="css/todo.css" />
+      <link rel="stylesheet" type="text/css" href="css/todo.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   </head>
   
 
   <body class="body">
-    <div ng-controller="TodoCtrl">
+    <div ng-controller="TodoCtrl" class="ng-controller">
       <h2>Total things left to do: {{getTotalTodos()}}</h2>
-      <ul class="unstyled">
-        <li ng-repeat="todo in todos">
-          <input type="checkbox" ng-model="todo.done">
-          <span class="done-{{todo.done}}">{{todo.text}}</span>
-        </li>
-      </ul>
+        <ul class="todolist">
+          <li ng-repeat="todo in todos" class="each-item">
+            <input type="checkbox" ng-model="todo.done">
+            <span class="done-{{todo.done}}">{{todo.text}}</span>
+          </li>
+        </ul>
+
       <form class="form-horizontal">
             <input type="text" ng-model="formTodoText" ng-model-instant placeholder="what do you need?">
-            {{formTodoText}}
+            
             <button class="btn btn-md btn-success" ng-click="addTodo()"><i class="icon-plus"></i>Add</button>
       </form>
       <button class="btn btn-md btn-danger" ng-click="clearCompleted()"><i></i>Clear Completed</button>
