--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
      </div> 
 
 
-    <script type="text/javascript" src="todo.js"></script>
+    <script type="text/javascript" src="js/todo.js"></script>
     <script src="http://documentcloud.github.io/underscore/underscore-min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
   </body>
